<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinanceFragment"
    android:gravity="center"
    >

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/action_settings1" />
        -->

    <TextView
        android:id="@+id/financeTextView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#00000c"
        android:padding="10dp"
        android:text="Saldo Actual"
        android:textColor="#fafafa"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginLeft="5dp"
        android:background="#AA000000"
        android:padding="10dp"
        android:text="Actualizado: 26/Jul/2017"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/balancetextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Saldo actual:" />

    <TextView
        android:id="@+id/balancetextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="22sp"
        android:text="2755 MZN" />


    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp" />

    <!--<Spinner
        android:id="@+id/half_spinner"
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginTop="150dp" />-->

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        >

        <RadioButton
            android:id="@+id/StatementRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_statement"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/ReferenceRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_reference"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_button"
        android:id="@+id/ir_button"
        android:layout_marginTop="400dp"
        android:defaultFocusHighlightEnabled="true"
        />



</FrameLayout>